A lot of progress - log in works, deck functions correctly, combat system started (able to use a few abilities) Stuck on a fix for help abilities applying to allies

--- a/style.css
+++ b/style.css
@@ -1351,7 +1351,7 @@ body {
     padding: 0;
     top: 60%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -1371,7 +1371,7 @@ body {
     padding: 0;
     top: 75%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -1457,7 +1457,7 @@ body {
     padding: 0;
     top: 60%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -1477,7 +1477,7 @@ body {
     padding: 0;
     top: 75%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -1563,7 +1563,7 @@ body {
     padding: 0;
     top: 60%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -1583,7 +1583,7 @@ body {
     padding: 0;
     top: 75%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -1669,7 +1669,7 @@ body {
     padding: 0;
     top: 60%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -1689,7 +1689,7 @@ body {
     padding: 0;
     top: 75%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -1775,7 +1775,7 @@ body {
     padding: 0;
     top: 60%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -1795,7 +1795,7 @@ body {
     padding: 0;
     top: 75%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -1881,7 +1881,7 @@ body {
     padding: 0;
     top: 60%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -1901,7 +1901,7 @@ body {
     padding: 0;
     top: 75%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -1987,7 +1987,7 @@ body {
     padding: 0;
     top: 60%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
@@ -2007,7 +2007,7 @@ body {
     padding: 0;
     top: 75%;
     left: 15%;
-    font-size: 1vw;
+    font-size: 0.9vw;
     color: blue;
     font-weight: bold;
 }
